<resources>
    <string name="app_name">PaeBook</string>
    <string name="text_email">이메일</string>
    <string name="text_password">비밀 번호</string>
    <string name="text_login">로그인</string>
    <string name="text_register">회원 가입</string>
    <string name="text_name">이름</string>
    <string name="text_password_confirm">비밀 번호 확인</string>
    <string name="text_birthday">생년월일</string>
    <string name="text_profile_photo">프로필 사진</string>
    <string name="text_confirm">확인</string>
    <string name="text_post_list">게시판</string>
    <string name="text_write_post">글쓰기</string>
    <string name="text_post">게시글</string>
    <string name="text_write_comment">댓글 쓰기</string>
    <string name="alert_password_confirm_not_match">불일치</string>
    <string name="text_date_format">yyyy년 MM월 dd일</string>
    <string name="text_date_format_detail">yyyy년 MM월 dd일 a hh시 mm분</string>
    <string name="alert_input_all_content">모든 항목을 입력해주세요</string>
    <string name="alert_password_not_match">사용자가 존재하지 않거나 비밀번호가 일치하지 않습니다</string>
    <string name="option_picture_title">사진 선택</string>
    <string name="option_select_gallery">갤러리</string>
    <string name="option_select_camera">카메라</string>
    <string name="warn_permission">이 기능을 사용하려면 권한을 허가해야합니다</string>
    <string name="text_select_date">날짜 선택</string>
    <string name="alert_title_please_wait">잠시만 기다려주세요</string>
    <string name="alert_waiting_for_server">서버의 응답을 기다리고 있습니다</string>
    <string name="text_title">제목</string>
    <string name="text_content">내용</string>
    <string name="text_picture">사진</string>
    <string name="warn_no_data">존재하지 않는 게시글입니다</string>
    <string name="text_delete">삭제</string>
    <string name="text_edit">수정</string>
    <string name="text_image_delete">이미지 삭제</string>
    <string name="text_post_delete">게시글 삭제</string>
    <string name="text_comment_delete">댓글 삭제</string>
    <string name="text_really_delete">정말로 삭제하시겠습니까?</string>
    <string name="text_cancel">취소</string>
    <string name="error_not_supported">이 기기는 지원되지 않습니다</string>
    <string name="text_comments">댓글</string>
    <string name="warn_image_edit">사진은 수정할 수 없습니다</string>
    <string name="text_logout">로그아웃</string>
</resources>
