<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:text="@string/text_title"
            android:textColor="@color/colorPrimary"
            android:textSize="16dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:background="@drawable/bg_round_primary"
            android:orientation="vertical"
            android:paddingBottom="8dp"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:paddingTop="8dp">

            <EditText
                android:id="@+id/edit_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginBottom="8dp"
                android:background="@null"
                android:inputType="text"
                android:minHeight="16dp"
                android:textColor="@color/colorWhite"
                android:textSize="16dp" />
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:text="@string/text_content"
            android:textColor="@color/colorPrimary"
            android:textSize="16dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:background="@drawable/bg_round_primary"
            android:orientation="vertical"
            android:paddingBottom="8dp"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:paddingTop="8dp">

            <EditText
                android:id="@+id/edit_content"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginBottom="8dp"
                android:background="@null"
                android:inputType="text"
                android:minHeight="16dp"
                android:textColor="@color/colorWhite"
                android:textSize="16dp" />
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:text="@string/text_picture"
            android:textColor="@color/colorPrimary"
            android:textSize="16dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:orientation="vertical">

            <android.support.v7.widget.RecyclerView
                android:id="@+id/recycler_images"
                android:layout_width="match_parent"
                android:layout_height="128dp"
                android:layout_marginBottom="8dp"
                android:background="@drawable/bg_round_primary"
                android:paddingBottom="8dp"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                android:paddingTop="8dp" />

            <Button
                android:id="@+id/btn_select"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_round_primary"
                android:text="@string/option_picture_title"
                android:textColor="@color/colorWhite" />
        </LinearLayout>

        <Button
            android:id="@+id/btn_write"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_round_primary"
            android:text="@string/text_write_post"
            android:textColor="@color/colorWhite" />
    </LinearLayout>
</ScrollView>